// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modelUtils addElement add end complex 1 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "branch-guid:0-branch-guid",
      "new-end-element-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "next": null,
    "prev": "start-guid",
  },
  "branch-guid:0-branch-guid": Object {
    "childIndex": 0,
    "children": Array [
      "branch-guid:0-branch-guid:0-branch-guid:0-end-guid",
      "end-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid:0-branch-guid",
    "isTerminal": true,
    "next": null,
    "parent": "branch-guid",
  },
  "branch-guid:0-branch-guid:0-branch-guid:0-end-guid": Object {
    "childIndex": 0,
    "elementType": "end",
    "guid": "branch-guid:0-branch-guid:0-branch-guid:0-end-guid",
    "isTerminal": true,
    "parent": "branch-guid:0-branch-guid",
    "prev": "start-guid",
  },
  "end-guid": Object {
    "childIndex": 1,
    "elementType": "end",
    "guid": "end-guid",
    "isTerminal": true,
    "parent": "branch-guid:0-branch-guid",
    "prev": null,
  },
  "new-end-element-guid": Object {
    "childIndex": 1,
    "guid": "new-end-element-guid",
    "isTerminal": true,
    "parent": "branch-guid",
    "prev": null,
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "next": "branch-guid",
    "parent": "root",
  },
}
`;

exports[`modelUtils addElement add end complex 2 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "branch-guid:0-branch-guid",
      "end-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "next": null,
    "prev": "start-guid",
  },
  "branch-guid:0-branch-guid": Object {
    "childIndex": 0,
    "children": Array [
      "branch-guid:0-branch-guid:0-branch-guid:0-end-guid",
      "new-end-element-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid:0-branch-guid",
    "isTerminal": true,
    "parent": "branch-guid",
  },
  "branch-guid:0-branch-guid:0-branch-guid:0-end-guid": Object {
    "childIndex": 0,
    "elementType": "end",
    "guid": "branch-guid:0-branch-guid:0-branch-guid:0-end-guid",
    "isTerminal": true,
    "parent": "branch-guid:0-branch-guid",
    "prev": "start-guid",
  },
  "end-guid": Object {
    "childIndex": 1,
    "elementType": "end",
    "guid": "end-guid",
    "isTerminal": true,
    "parent": "branch-guid",
    "prev": null,
  },
  "new-end-element-guid": Object {
    "childIndex": 1,
    "guid": "new-end-element-guid",
    "isTerminal": true,
    "parent": "branch-guid:0-branch-guid",
    "prev": null,
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "next": "branch-guid",
    "parent": "root",
  },
}
`;

exports[`modelUtils addElement add end node to left branch of decision with empty branches 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "new-end-element-guid",
      "end-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "next": null,
    "prev": "start-guid",
  },
  "end-guid": Object {
    "childIndex": 1,
    "elementType": "end",
    "guid": "end-guid",
    "isTerminal": true,
    "parent": "branch-guid",
    "prev": null,
  },
  "new-end-element-guid": Object {
    "childIndex": 0,
    "guid": "new-end-element-guid",
    "isTerminal": true,
    "parent": "branch-guid",
    "prev": null,
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "next": "branch-guid",
    "parent": "root",
  },
}
`;

exports[`modelUtils addElement add end node to left branch of decision with with non-empty left branch 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "branch-guid:0-head-guid",
      "end-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "next": null,
    "prev": "start-guid",
  },
  "branch-guid:0-head-guid": Object {
    "childIndex": 0,
    "guid": "branch-guid:0-head-guid",
    "isTerminal": true,
    "next": "new-end-element-guid",
    "parent": "branch-guid",
  },
  "end-guid": Object {
    "childIndex": 1,
    "elementType": "end",
    "guid": "end-guid",
    "isTerminal": true,
    "parent": "branch-guid",
    "prev": null,
  },
  "new-end-element-guid": Object {
    "guid": "new-end-element-guid",
    "prev": "branch-guid:0-head-guid",
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "next": "branch-guid",
    "parent": "root",
  },
}
`;

exports[`modelUtils addElement add end node to left branch of decision with with non-empty right branch 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "new-end-element-guid",
      "branch-guid:1-head-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "next": null,
    "prev": "start-guid",
  },
  "branch-guid:1-head-guid": Object {
    "childIndex": 1,
    "guid": "branch-guid:1-head-guid",
    "isTerminal": true,
    "next": "end-guid",
    "parent": "branch-guid",
  },
  "end-guid": Object {
    "elementType": "end",
    "guid": "end-guid",
    "prev": "branch-guid:1-head-guid",
  },
  "new-end-element-guid": Object {
    "childIndex": 0,
    "guid": "new-end-element-guid",
    "isTerminal": true,
    "parent": "branch-guid",
    "prev": null,
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "next": "branch-guid",
    "parent": "root",
  },
}
`;

exports[`modelUtils reconnectBranchElement reconnects to an element on another branch 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "branch-guid:0-head-guid",
      "branch-guid:1-head-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "next": "branch-guid:1-random-guid",
    "prev": "start-guid",
  },
  "branch-guid:0-head-guid": Object {
    "childIndex": 0,
    "guid": "branch-guid:0-head-guid",
    "isTerminal": false,
    "next": null,
    "parent": "branch-guid",
  },
  "branch-guid:1-end-guid": Object {
    "elementType": "end",
    "guid": "branch-guid:1-end-guid",
    "prev": "branch-guid:1-random-guid",
  },
  "branch-guid:1-head-guid": Object {
    "childIndex": 1,
    "guid": "branch-guid:1-head-guid",
    "isTerminal": false,
    "next": null,
    "parent": "branch-guid",
  },
  "branch-guid:1-random-guid": Object {
    "guid": "branch-guid:1-random-guid",
    "next": "branch-guid:1-end-guid",
    "prev": "branch-guid",
  },
  "end-guid": Object {
    "elementType": "end",
    "guid": "end-guid",
    "prev": "branch-guid",
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": false,
    "next": "branch-guid",
    "parent": "root",
  },
}
`;

exports[`modelUtils reconnectBranchElement reconnects to the merge element 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "branch-guid:0-head-guid",
      "branch-guid:1-head-guid",
      "branch-guid:2-head-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "next": "end-guid",
    "prev": "start-guid",
  },
  "branch-guid:0-head-guid": Object {
    "childIndex": 0,
    "guid": "branch-guid:0-head-guid",
    "isTerminal": false,
    "next": null,
    "parent": "branch-guid",
  },
  "branch-guid:1-head-guid": Object {
    "childIndex": 1,
    "guid": "branch-guid:1-head-guid",
    "isTerminal": false,
    "next": "branch-guid:1-random-guid",
    "parent": "branch-guid",
  },
  "branch-guid:1-random-guid": Object {
    "guid": "branch-guid:1-random-guid",
    "prev": "branch-guid:1-head-guid",
  },
  "branch-guid:2-head-guid": Object {
    "childIndex": 2,
    "guid": "branch-guid:2-head-guid",
    "isTerminal": false,
    "parent": "branch-guid",
  },
  "end-guid": Object {
    "elementType": "end",
    "guid": "end-guid",
    "prev": "branch-guid",
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "next": "branch-guid",
    "parent": "root",
  },
}
`;
